Fixing the alignment of youWon div (margin set to auto, top: -30vh).

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,17 +4,16 @@
     display: flex;
     flex-direction: row;
     padding-top: 2vh;
-    
     position: fixed;
     bottom: 0;
     z-index: 2;
-
     height: 14vh;
     width: 100%;
     background-color: #B8B8FF;
-
     justify-content: center;
-    
+    font-family: 'Concert One';
+    font-weight: bolder;
+    color: #F8F7FF;
 }
 
 .Scores {
@@ -32,18 +31,11 @@
 }
 
 .Scores h2 {
-    color: #F8F7FF;
-    font-weight: bolder;
     font-size: 3.5vh;
-    font-family: 'Concert One';
-    
 }
 
 .Scores h3 {
-    color: #F8F7FF;
-    font-weight: bolder;
     font-size: 5vh;
-    font-family: 'Concert One';
 }
 
 .NewGameButton {
@@ -61,11 +53,7 @@
 }
 
 .NewGameButton h2 {
-    color: #F8F7FF;
-    font-weight: bolder;
     font-size: 3.5vh;
-    font-family: 'Concert One';
-    
 }
 
 
